test/libyul/yulSyntaxTests/dot_ellipse_function.yul
{
    function x...y() {}
}
// ----
// SyntaxError 7771: (6-25): "x...y" is not a valid identifier (contains consecutive dots).
